# VieCut

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  compile.sh  uncrustify_all.py
app/: balanced_small_cut.cpp  create_augment_edges.cpp  decremental_gnp.cpp  dynamic_mincut.cpp  dynmc_from_static.cpp  gnp_torus.cpp  kcore.cpp  largest_cc.cpp  make_graph_weighted.cpp  mincut.cpp  mincut_contract.cpp  mincut_heavy.cpp  mincut_recursive.cpp  multiterminal_cut.cpp  temporal_largest_cc.cpp
cmake/: FindGurobi.cmake  FindProfiler.cmake  FindTcmalloc.cmake
codestyle/: cpplint.py  git_linter.py  lint_all.py  uncrustify.cfg  uncrustify_all.py
lib/: definitions.h
lib/algorithms/flow/: excess_scaling.h  push_relabel.h  unit_flow.h
lib/algorithms/global_mincut/: algorithms.h  ks_minimum_cut.h  matula_approx.h  minimum_cut.h  minimum_cut_helpers.h  noi_minimum_cut.h  padberg_rinaldi.h  stoer_wagner_minimum_cut.h  viecut.h
lib/algorithms/global_mincut/cactus/: all_cut_local_red.h  balanced_cut_dfs.h  cactus_mincut.h  graph_modification.h  heavy_edges.h  most_balanced_minimum_cut.h  recursive_cactus.h
lib/algorithms/global_mincut/dynamic/: cactus_path.h  dynamic_mincut.h
lib/algorithms/misc/: core_decomposition.h  equal_neighborhood.h  find_articulation_points.h  find_bridges.h  graph_algorithms.h  maximal_clique.h  strongly_connected_components.h
lib/algorithms/multicut/: branch_multicut.h  edge_selection.h  graph_contraction.h  ilp_model.h  kernelization_criteria.h  local_search.h  maximum_flow.h  measurements.h  mpi_communication.h  multicut_problem.h  multiterminal_cut.h  problem_management.h  solve_with_ilp.h
lib/algorithms/multicut/problem_queues/: per_thread_problem_queue.h
lib/coarsening/: contract_graph.h  contraction_tests.h  core_decomposition.h  excess_scaling.h  label_propagation.h  sparsify.h  test_wrapper.h
lib/common/: configuration.h  definitions.h  string.h
lib/data_structure/: adjlist_graph.h  flow_graph.h  graph_access.h  mutable_graph.h  union_find.h
lib/data_structure/priority_queues/: bucket_pq.h  fifo_node_bucket_pq.h  maxNodeHeap.h  node_bucket_pq.h  priority_queue_interface.h  vecMaxNodeHeap.h
lib/io/: graph_io.cpp  graph_io.h  graph_io_adj.h
lib/parallel/algorithm/: exact_parallel_minimum_cut.h  parallel_cactus.h
lib/parallel/coarsening/: contract_graph.h  contraction_tests.h  label_propagation.h  sparsify.h
lib/parallel/data_structure/: union_find.h
lib/tools/: graph_extractor.cpp  graph_extractor.h  hash.h  macros_assertions.h  macros_common.h  quality_metrics.h  random_functions.cpp  random_functions.h  string.h  string_tools.h  timer.h  vector.h
tests/: CMakeLists.txt  cactus_cut_test.cpp  clique_test.cpp  contraction_test.cpp  core_decomposition_test.cpp  flow_graph_test.cpp  graph_test.cpp  mincut_algo_test.cpp  multiterminal_cut_test.cpp  mutable_graph_test.cpp  pq_test.cpp  push_relabel_test.cpp  save_cut_test.cpp  union_find_test.cpp
